Fix spacing for subtitle on top of fieldset

--- a/src/components/field.scss
+++ b/src/components/field.scss
@@ -324,3 +324,7 @@
         display: block;
     }
 }
+
+.cui__subtitle + .cui__field__wrapper {
+    padding-top: 1rem;
+}
